# learning-langchain-book

./: .gitignore  highlights-notes.md  pyproject.toml
ch1/: ch1_highlights.ipynb
ch2/: ch2_highlights.ipynb
