[project]
name = "learning-langchain"
version = "0.0.1"
description = "Code blocks for the book Learning LangChain."
authors = []
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "langgraph>=0.2.6",
    "langchain-openai>=0.1.22",
    "langchain>=0.2.14",
    "python-dotenv>=1.0.1",
    "langchain-community>=0.3.15",
    "langchain-postgres>=0.0.12",
    "langchain-chroma>=0.2.0",
    "beautifulsoup4>=4.12.2",
    "pypdf>=5.1.0",
    "psycopg[binary]>=3.2.4",  # Updated to include [binary] extra
    "setuptools>=75.8.0",
    "langsmith>=0.3.2",
    "langgraph-checkpoint-sqlite>=2.0.3",
    "duckduckgo-search>=7.3.0",
    "langgraph-cli>=0.1.73",
    "langchain-cohere (==0.4.4)",
    "langchain-text-splitters (>=0.3.11,<0.4.0)",
    "cohere (==5.15.0)",
    "pymupdf (>=1.26.4,<2.0.0)",
    "langchain-qdrant (==0.2.0)",
    "qdrant-client (==1.15.1)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
ipykernel = "^6.30.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

